--- a/text.css
+++ b/text.css
@@ -2,6 +2,7 @@
     }
 
 html,body{
+    font-size: 1em;
     height: 100%;
    background: linear-gradient(blue, #82257d); 
    margin: 0;
@@ -39,7 +40,7 @@ a{    background: white;
 
 
 #canvas{
-
+    font-size: 1em;
     margin:1rem;
     padding: 0;
 }
@@ -49,6 +50,7 @@ head{
     flex-direction: row;
 }
 #input{
+    font-size: 1em;
     margin-left: 15%;
     
     height: min-content;
